--- a/source/index.html
+++ b/source/index.html
@@ -495,6 +495,10 @@
       </div>
     </section>
 
+    <div class="transition">
+      <div class="transition--background"></div>
+    </div>
+
   </main>
 
 </body>
