:heavy_check_mark: Сборка #3

--- a/3/index.html
+++ b/3/index.html
@@ -460,6 +460,10 @@
       </div>
     </section>
 
+    <div class="transition">
+      <div class="transition--background"></div>
+    </div>
+
   </main>
 
 <script src="js/script.js"></script></body>
