--- a/source/index.html
+++ b/source/index.html
@@ -397,10 +397,11 @@
       <div class="screen__wrapper">
         <div class="result result--prize">
           <div class="result__image">
-            <picture>
-              <source srcset="img/result2-mob.png 1x, img/result2-mob@2x.png 2x" media="(max-width: 768px) and (orientation: portrait)">
-              <img src="img/result2.png" srcset="img/result2@2x.png 2x" alt="">
-            </picture>
+            <img src="img/module-2/win-suitcase/leaf blue 1.png" class="image_leaf-blue-1" alt="leaf blue 1">
+            <img src="img/module-2/win-suitcase/leaf blue 2.png" class="image_leaf-blue-2" alt="leaf blue 2">
+            <img src="img/module-2/win-suitcase/leaf green.png" class="image_leaf-green" alt="leaf green">
+            <img src="img/module-2/win-suitcase/suitcase.png" class="image_suitcase" alt="suitcase">
+            <img src="img/module-2/win-suitcase/flamingo.png" class="image_flamingo" alt="flamingo">
           </div>
           <h2 class="result__title">
             <span class="visually-hidden">ПОбеда!</span>
