--- a/source/index.html
+++ b/source/index.html
@@ -431,9 +431,11 @@
           </div>
           <div class="result__form">
             <form action="#" method="post" class="form form--result">
-              <label for="email-field2" class="form__label">зарегистрируй результат</label>
-              <input type="email" class="form__field" id="email-field2" placeholder="e-mail для регистации результата и получения приза" required>
-              <button class="form__button btn">
+              <div class="form__labeled-field">
+                <input class="form__field" type="text" id="email-field2" required>
+                <label for="email-field2" data-label="e-mail для регистации результата и получения приза"></label>
+              </div>
+              <button class="form__button form__button--animated btn">
                 отправить
                 <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path stroke="currentColor" stroke-width="2" d="M9 19V1"/>
