--- a/source/index.html
+++ b/source/index.html
@@ -347,7 +347,7 @@
           <div class="result__image">
             <picture>
               <source srcset="img/result1-mob.png 1x, img/result1-mob@2x.png 2x" media="(max-width: 768px) and (orientation: portrait)">
-              <img src="img/result1.png" srcset="img/result1@2x.png 2x" alt="">
+              <img src="img/result1.png" srcset="img/result1@2x.png 2x" alt="" class="image__full-screen">
             </picture>
           </div>
           <h2 class="result__title">
@@ -454,7 +454,7 @@
           <div class="result__image">
             <picture>
               <source srcset="img/result3-mob.png 1x, img/result3-mob@2x.png 2x" media="(max-width: 768px) and (orientation: portrait)">
-              <img src="img/result3.png" srcset="img/result3@2x.png 2x" alt="">
+              <img src="img/result3.png" srcset="img/result3@2x.png 2x" alt="" class="image__full-screen">
             </picture>
           </div>
           <h2 class="result__title">
