--- a/source/index.html
+++ b/source/index.html
@@ -193,10 +193,9 @@
           <ul class="prizes__list">
             <li class="prizes__item prizes__item--journeys">
               <div class="prizes__icon">
-                <picture>
-                  <source srcset="img/prize1-mob.svg" media="(orientation: portrait)">
-                  <img src="img/prize1.svg" alt="">
-                </picture>
+                <object id="journeysPrize" type="image/svg+xml" data="img/primary-award.svg" class="prizes__icon" width="350" height="330">
+                 <img src="img/primary-award.svg" alt="fallbackSvg" width="350" height="330">
+                </object>
               </div>
               <p class="prizes__desc">
                 <b>3</b>
@@ -217,10 +216,7 @@
             </li>
             <li class="prizes__item prizes__item--codes">
               <div class="prizes__icon">
-                <picture>
-                  <source srcset="img/prize3-mob.svg" media="(orientation: portrait)">
                   <img src="img/prize3.svg" alt="">
-                </picture>
               </div>
               <p class="prizes__desc">
                 <b>900</b>
