добавлена анимация второго приза

--- a/source/index.html
+++ b/source/index.html
@@ -202,10 +202,9 @@
             </li>
             <li class="prizes__item prizes__item--cases">
               <div class="prizes__icon">
-                <picture>
-                  <source srcset="img/prize2-mob.svg" media="(orientation: portrait)">
-                  <img src="img/prize2.svg" alt="">
-                </picture>
+                <object id="casesPrize" type="image/svg+xml" data="img/secondary-award.svg" class="prizes__icon" width="350" height="330">
+                  <img src="img/secondary-award.svg" alt="fallbackSvg" width="350" height="330">
+                </object>
               </div>
               <p class="prizes__desc">
                 <b>7</b>
@@ -247,8 +246,8 @@
             <p class="screen__footer-date">01 — 31.05 / 2020</p>
           </div>
           <div class="screen__footer-note">
-            <p>
-              <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <p>
+            <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 6.35337L3.90271 4.99012L0 3.64663L1.34615 1.32374L4.44287 4.01073L3.67364 0H6.34615L5.57692 4.01073L8.65385 1.32374L10 3.64663L6.13405 4.99012L10 6.35337L8.65385 8.65651L5.57692 5.98927L6.34615 10H3.67364L4.44287 5.96952L1.34615 8.65651L0 6.35337Z" fill="currentColor"/>
               </svg>
               <span>Скидка&nbsp;15% на&nbsp;единоразовое приобретение путёвки с&nbsp;1&nbsp;июня 2020 по&nbsp;31&nbsp;мая 2022&nbsp;года. Суммируется с&nbsp;другими акциями</span>
