--- a/source/index.html
+++ b/source/index.html
@@ -192,7 +192,7 @@
           </div>
           <ul class="prizes__list">
             <li class="prizes__item prizes__item--journeys">
-              <object id="journeysPrize" type="image/svg+xml" data="img/primary-award.svg" class="prizes__icon" width="350" height="330">
+              <object id="primaryAward" type="image/svg+xml" data="img/primary-award.svg" class="prizes__icon" width="350" height="330">
                 <img src="img/primary-award.svg" alt="fallbackSvg" width="350" height="330">
               </object>
               <p class="prizes__desc">
@@ -202,7 +202,7 @@
             </li>
             <li class="prizes__item prizes__item--cases">
               <div class="prizes__icon">
-                <object id="casesPrize" type="image/svg+xml" data="img/secondary-award.svg" class="prizes__icon" width="350" height="330">
+                <object id="secondaryAward" type="image/svg+xml" data="img/secondary-award.svg" class="prizes__icon" width="350" height="330">
                   <img src="img/secondary-award.svg" alt="fallbackSvg" width="350" height="330">
                 </object>
               </div>
@@ -213,7 +213,9 @@
             </li>
             <li class="prizes__item prizes__item--codes">
               <div class="prizes__icon">
-                  <img src="img/prize3.svg" alt="">
+                <object id="additionalAward" type="image/svg+xml" data="img/additional-award.svg" class="prizes__icon" width="350" height="330">
+                  <img src="img/additional-award.svg" alt="fallbackSvg" width="350" height="330">
+                </object>
               </div>
               <p class="prizes__desc">
                 <b>900</b>
