--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initiale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mysterious Vacation</title>
 </head>
@@ -196,7 +196,7 @@
                 <img src="img/primary-award.svg" alt="fallbackSvg" width="350" height="330">
               </object>
               <p class="prizes__desc">
-                <b>0</b>
+                <b>3</b>
                 <span>загадочных путешествия</span>
               </p>
             </li>
@@ -339,12 +339,7 @@
     <section class="screen screen--hidden screen--result" id="result">
       <div class="screen__wrapper">
         <div class="result result--trip">
-          <div class="result__image">
-            <picture>
-              <source srcset="img/result1-mob.png 1x, img/result1-mob@2x.png 2x" media="(max-width: 768px) and (orientation: portrait)">
-              <img src="img/result1.png" srcset="img/result1@2x.png 2x" alt="" class="image__full-screen">
-            </picture>
-          </div>
+          <canvas id="sea-calf-scene" class="result__image">Обновите ваш браузер для воспроизведения анимаций</canvas>
           <h2 class="result__title">
             <span class="visually-hidden">ПОбеда!</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 568.85 109.24" class="svg__winning-word">
