--- a/source/index.html
+++ b/source/index.html
@@ -702,12 +702,7 @@
     <section class="screen screen--hidden screen--result" id="result3">
       <div class="screen__wrapper">
         <div class="result result--negative">
-          <div class="result__image">
-            <picture>
-              <source srcset="img/result3-mob.png 1x, img/result3-mob@2x.png 2x" media="(max-width: 768px) and (orientation: portrait)">
-              <img src="img/result3.png" srcset="img/result3@2x.png 2x" alt="" class="image__full-screen">
-            </picture>
-          </div>
+          <canvas id="crocodile-scene" class="result__image">Обновите ваш браузер для воспроизведения анимаций</canvas>
           <h2 class="result__title">
             <span class="visually-hidden">Не угадал!</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 660.77 209.24" class="svg__lose-word">
