отключил background, добавил контейнеры для canvas

--- a/source/index.html
+++ b/source/index.html
@@ -77,7 +77,9 @@
 
   <main class="page-content">
 
-    <section class="animation-screen"></section>
+    <section class="animation-screen">
+      <canvas id="canvas--animation-screen"></canvas>
+    </section>
 
     <section class="screen screen--hidden screen--intro" id="top">
       <div class="screen__wrapper">
@@ -129,6 +131,8 @@
     </section>
 
     <section class="screen screen--hidden screen--story" id="story">
+
+      <canvas id="canvas--screen--story"></canvas>
 
       <div class="slider swiper-container js-slider">
 
