--- a/source/index.html
+++ b/source/index.html
@@ -332,6 +332,8 @@
           </div>
         </div>
       </div>
+
+      <img class="screen--game--sonya" src="img/sonya.png" srcset="img/sonya.png, img/sonya@2x.png 2x" alt="sonya"/>
     </section>
 
     <section class="screen screen--hidden screen--result" id="result">
